# course_work_5

./: .env.example  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy.yml
config/: settings.py  urls.py
habit_tracker/: admin.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habit_tracker/migrations/: 0001_initial.py
users/: models.py
users/migrations/: 0001_initial.py
